# ainews

./: .gitignore  LICENSE  Makefile  README.md  ai_news_feed.py  pyproject.toml  run
ainews/: __init__.py  __main__.py  analysis.py  app.py  cache.py  colors.py  concepts_seed.py  config.py  enrich.py  export.py  feeds.py  glyphs.py  importance.py  llm.py  loading.py  markdown_render.py  mastery.py  models.py  openurl.py  persist.py  reader.py  state.py  textwidth.py  ui.py  wrapping.py
tests/: test_core.py
